--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,14 +1,59 @@
+# name: CodeGuru Security Example
+# on:
+#   pull_request:
+#     branches:
+#       - 'main'
+
+
+# permissions:
+#   id-token: write
+#   security-events: write
+#   # only required for workflows in private repositories
+#   actions: read
+#   contents: read
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout Respository
+#         uses: actions/checkout@v3
+#         with:
+#           fetch-depth: 0
+
+#       - name: Configure aws credentials
+#         uses: aws-actions/configure-aws-credentials@v2
+#         with:
+#           role-to-assume: arn:aws:iam::325442430825:role/CodeGuruSecurityGitHubAccessRole
+#           aws-region: us-east-2
+#           role-session-name: GitHubActionScript
+
+#       - name: CodeGuru Security
+#         uses: aws-actions/codeguru-security@v1
+#         with:
+#           source_path: .
+#           aws_region: us-east-2
+#           fail_on_severity: Critical
+#       - name: Print findings
+#         run: |
+#           ls -l
+#           cat codeguru-security-results.sarif.json
+
+#       # If you want content in security scanning, you’ll need to enable codescanning by going into github.
+#       # https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning-for-a-repository
+#       - name: Upload result
+#         uses: github/codeql-action/upload-sarif@v2
+#         with:
+#           sarif_file: codeguru-security-results.sarif.json
 name: CodeGuru Security Example
 on:
   pull_request:
     branches:
       - 'main'
 
-
 permissions:
   id-token: write
   security-events: write
-  # only required for workflows in private repositories
   actions: read
   contents: read
 
@@ -16,17 +61,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Respository
+      - name: Checkout Repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Configure aws credentials
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: arn:aws:iam::325442430825:role/CodeGuruSecurityGitHubAccessRole
           aws-region: us-east-2
           role-session-name: GitHubActionScript
+          audience: sts.amazonaws.com
 
       - name: CodeGuru Security
         uses: aws-actions/codeguru-security@v1
@@ -34,14 +80,14 @@ jobs:
           source_path: .
           aws_region: us-east-2
           fail_on_severity: Critical
+      
       - name: Print findings
         run: |
           ls -l
           cat codeguru-security-results.sarif.json
 
-      # If you want content in security scanning, you’ll need to enable codescanning by going into github.
-      # https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning-for-a-repository
       - name: Upload result
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: codeguru-security-results.sarif.json
+
