--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -91,16 +91,16 @@
 #         with:
 #           sarif_file: codeguru-security-results.sarif.json
 name: CodeGuru Security Example
-on:
-    branches:
-      - 'main'
 
+on:
+  push:
+    branches:
+      - main
 
 permissions:
   id-token: write
   security-events: write
-  # only required for workflows in private repositories
-  actions: read
+  actions: read  # only required for workflows in private repositories
   contents: read
 jobs:
   build:
