--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -181,10 +181,10 @@ jobs:
 
       - name: Comment on Pull Request
         if: github.event_name == 'pull_request' && steps.diff_check.outputs.has_diff == 'true'
-        uses: unsplash/comment-on-pr@v1
+        uses: peter-evans/create-or-update-comment@v2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          comment: |
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
             Code differences have been detected:
             ```
             $(cat code_diff.txt)
