--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -142,7 +142,7 @@ on:
       - main
   pull_request:
     branches:
-      - '**'  # This will trigger on PRs to any branch
+      - '**'
 
 jobs:
   analyze:
@@ -152,12 +152,22 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Fetch all history for accurate diffs
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.8'  # Specify the Python version you want to use
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt  # Install dependencies from your requirements file
 
       - name: Run Code Analysis
         run: |
-          # Add your code analysis command here, e.g., ESLint, SonarQube, etc.
-          npm run lint  # Example command, modify as needed
+          # Replace `your_code_analysis_tool` with the actual tool you want to use (e.g., flake8, pylint, etc.)
+          your_code_analysis_tool .  # Run code analysis on your project directory
 
       - name: Check for Code Differences
         id: diff_check
