--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -164,10 +164,12 @@ jobs:
           pip install pylint  # Install Pylint
 
       - name: Run Pylint
+        id: pylint
         run: |
-          pylint test.py  # Run Pylint on your test.py file
-          pylint_output=$(pylint test.py)  # Capture Pylint output
+          pylint_output=$(pylint test.py || true)  # Capture Pylint output and ignore exit code
           echo "$pylint_output" > pylint_results.txt  # Save results to a file
+          echo "::set-output name=pylint_output::$pylint_output"  # Save output for further use
+
 
       - name: Check for Code Differences
         id: diff_check
