--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -250,31 +250,96 @@
 #         uses: github/codeql-action/upload-sarif@v2
 #         with:
 #           sarif_file: codeguru-security-results.sarif.json  # Upload the SARIF results
-name: Code Review with CodeGuru
+# name: Code Review with CodeGuru
+
+# on:
+#   pull_request:
+#     branches:
+#       - main 
+
+
+# permissions:
+#   id-token: write 
+#   security-events: write 
+#   actions: read  
+#   contents: read 
+#   pull-requests: write
+
+# jobs:
+#   code-review:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v3
+#         with:
+#           fetch-depth: 0  # Ensure all history is fetched for analysis
+
+#       - name: Configure AWS Credentials
+#         uses: aws-actions/configure-aws-credentials@v2
+#         with:
+#           role-to-assume: arn:aws:iam::325442430825:role/CodeGuruSecurityGitHubAccessRole
+#           aws-region: us-east-2
+#           role-session-name: GitHubActionScript
+
+#       - name: Run CodeGuru Security Analysis
+#         uses: aws-actions/codeguru-security@v1
+#         with:
+#           source_path: .  # Specify the source code path
+#           aws_region: us-east-2
+#           fail_on_severity: Critical  
+
+#       - name: Print Findings
+#         run: |
+#           ls -l
+#           cat codeguru-security-results.sarif.json  # Display findings for review
+
+#             - name: Comment on Pull Request
+#         if: github.event_name == 'pull_request'
+#         uses: peter-evans/create-or-update-comment@v2
+#         with:
+#           issue-number: ${{ github.event.pull_request.number }}
+#           body: |
+#             ### CodeGuru Security Analysis Results
+#             Here are the findings from the CodeGuru Security analysis:
+#             ```json
+#             $(cat codeguru-security-results.sarif.json)
+#             ```
+#             Please review the findings and address any critical issues.
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the default token for commenting
+
+
+#       - name: Upload SARIF Results
+#         uses: github/codeql-action/upload-sarif@v2
+#         with:
+#           sarif_file: codeguru-security-results.sarif.json  # Upload the SARIF results
+name: Code Review with CodeGuru and Comment Feedback
 
 on:
   pull_request:
     branches:
-      - main 
-
+      - main  # or specify branches as needed
 
 permissions:
   id-token: write 
   security-events: write 
   actions: read  
   contents: read 
-  pull-requests: write
+  pull-requests: write  # Allows writing comments on PRs
 
 jobs:
   code-review:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the code
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Ensure all history is fetched for analysis
 
+      # Step 2: Configure AWS credentials for CodeGuru
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -282,35 +347,39 @@ jobs:
           aws-region: us-east-2
           role-session-name: GitHubActionScript
 
+      # Step 3: Run CodeGuru Security Analysis
       - name: Run CodeGuru Security Analysis
         uses: aws-actions/codeguru-security@v1
         with:
-          source_path: .  # Specify the source code path
+          source_path: .  # Analyze the root source path
           aws_region: us-east-2
-          fail_on_severity: Critical  
+          fail_on_severity: Critical
 
-      - name: Print Findings
-        run: |
-          ls -l
-          cat codeguru-security-results.sarif.json  # Display findings for review
-
-            - name: Comment on Pull Request
+      # Step 4: Comment on Pull Request with Findings
+      - name: Print Findings and Post Feedback
         if: github.event_name == 'pull_request'
+        run: |
+          if [ -f codeguru-security-results.sarif.json ]; then
+            echo "Posting CodeGuru Security Analysis findings as a comment."
+            COMMENT_CONTENT=$(jq -r '.runs[].results[] | select(.level == "error" or .level == "warning") | .message.text' codeguru-security-results.sarif.json)
+            if [ -n "$COMMENT_CONTENT" ]; then
+              echo "### CodeGuru Security Analysis Results" > comment.md
+              echo "$COMMENT_CONTENT" >> comment.md
+            else
+              echo "No critical or warning findings detected."
+            fi
+          else
+            echo "No SARIF file found."
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Step 5: Create or update the comment on the pull request
+      - name: Create or Update PR Comment
+        if: success() && github.event_name == 'pull_request' && env.COMMENT_CONTENT != ""
         uses: peter-evans/create-or-update-comment@v2
         with:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            ### CodeGuru Security Analysis Results
-            Here are the findings from the CodeGuru Security analysis:
-            ```json
-            $(cat codeguru-security-results.sarif.json)
-            ```
-            Please review the findings and address any critical issues.
+            $(cat comment.md)
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the default token for commenting
-
-
-      - name: Upload SARIF Results
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: codeguru-security-results.sarif.json  # Upload the SARIF results
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
