--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -319,7 +319,7 @@ name: Code Review with CodeGuru and Comment Feedback
 on:
   push:
     branches:
-      - main # or specify branches as needed
+      - main 
 
 permissions:
   id-token: write 
