--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -93,20 +93,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          java-version: '11'
+          python-version: '3.8'  # Specify your desired Python version
 
-      - name: Cache SonarQube Scanner
-        uses: actions/cache@v2
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar-cache
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install sonar-scanner
 
       - name: Run SonarQube Scan
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_CUBE }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           sonar-scanner \
             -Dsonar.projectKey=YOUR_PROJECT_KEY \
@@ -114,7 +113,7 @@ jobs:
             -Dsonar.host.url=http://localhost:9000 \
             -Dsonar.login=$SONAR_TOKEN
 
-      - name: Comment PR with SonarQube results
+      - name: Create or update PR comment with SonarQube results
         uses: peter-evans/create-or-update-comment@v2
         with:
           issue-number: ${{ github.event.pull_request.number }}
