--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -105,13 +105,13 @@ jobs:
 
       - name: Run SonarQube Scan
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_CUBE }}
         run: |
           sonar-scanner \
             -Dsonar.projectKey=YOUR_PROJECT_KEY \
             -Dsonar.sources=. \
             -Dsonar.host.url=http://localhost:9000 \
-            -Dsonar.login=$SONAR_TOKEN
+            -Dsonar.login=$SONAR_CUBE
 
       - name: Create or update PR comment with SonarQube results
         uses: peter-evans/create-or-update-comment@v2
