--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -104,16 +104,17 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y unzip wget
           
-          # Download SonarScanner
-          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/4.8.0.2856/sonar-scanner-cli-4.8.0.2856-linux.zip -O sonar-scanner.zip
+          # Download SonarScanner (use the latest version available)
+          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/4.9.0.2991/sonar-scanner-cli-4.9.0.2991-linux.zip -O sonar-scanner.zip
           
           # Unzip the scanner
           unzip sonar-scanner.zip
           
           # Move the sonar-scanner to /usr/local/bin for global access
-          sudo mv sonar-scanner-4.8.0.2856-linux/bin/sonar-scanner /usr/local/bin/
-          sudo mv sonar-scanner-4.8.0.2856-linux/conf/sonar-scanner.properties /usr/local/bin/
-          sudo mv sonar-scanner-4.8.0.2856-linux/lib /usr/local/lib/sonar-scanner
+          sudo mv sonar-scanner-4.9.0.2991-linux/bin/sonar-scanner /usr/local/bin/
+          sudo mv sonar-scanner-4.9.0.2991-linux/conf/sonar-scanner.properties /usr/local/bin/
+          sudo mv sonar-scanner-4.9.0.2991-linux/lib /usr/local/lib/sonar-scanner
+
 
 
       - name: Run SonarQube Scan
