--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -81,6 +81,9 @@
 name: SonarQube Analysis
 
 on:
+  push:
+    branches:
+      - main  # or your default branch
   pull_request:
     branches:
       - main
@@ -93,47 +96,29 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'  # Specify your desired Python version
-
       - name: Install SonarScanner
         run: |
           # Install required dependencies
           sudo apt-get update
           sudo apt-get install -y unzip wget
-          
+
           # Download SonarScanner from GitHub
           wget https://github.com/SonarSource/sonar-scanner-cli/releases/download/4.9.0.2991/sonar-scanner-cli-4.9.0.2991-linux.zip -O sonar-scanner.zip
-          
+
           # Unzip the scanner
           unzip sonar-scanner.zip
-          
+
           # Move the sonar-scanner to /usr/local/bin for global access
           sudo mv sonar-scanner-4.9.0.2991-linux/bin/sonar-scanner /usr/local/bin/
           sudo mv sonar-scanner-4.9.0.2991-linux/conf/sonar-scanner.properties /usr/local/bin/
           sudo mv sonar-scanner-4.9.0.2991-linux/lib /usr/local/lib/sonar-scanner
 
-
-
-
       - name: Run SonarQube Scan
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Ensure this is set correctly in your GitHub secrets
+          SONAR_TOKEN: ${{ secrets.SONAR_CUBE }}  # Your secret token
         run: |
           sonar-scanner \
-            -Dsonar.projectKey=devops \  # Your project key
+            -Dsonar.projectKey=devops \
             -Dsonar.sources=. \
             -Dsonar.host.url=http://localhost:9000 \
-            -Dsonar.login=$SONAR_TOKEN \
-            -Dsonar.language=py  # Specify Python as the language
-
-      - name: Create or update PR comment with SonarQube results
-        uses: peter-evans/create-or-update-comment@v2
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          body: |
-            SonarQube analysis completed. Check results here: [SonarQube](http://localhost:9000/dashboard?id=devops)  # Updated link
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            -Dsonar.login=$SONAR_CUBE
