--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -1,4 +1,4 @@
-name: Reviewdog Code Review
+name: Reviewdog Code Review for Python
 
 on:
   pull_request:
@@ -11,20 +11,27 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
       
-      # Install the required linter or code analysis tool
-      - name: Install dependencies
-        run: |
-          npm install  # Example for JavaScript projects; change as needed
-      
-      # Run the linter and save output
-      - name: Run linter (ESLint example)
-        run: |
-          npx eslint . --format=json > eslint-report.json || true  # Avoid failing the action
+      # Set up Python environment
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'  # Replace with your Python version
 
-      # Run Reviewdog with the linter output
+      # Install Python dependencies
+      - name: Install flake8
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+
+      # Run flake8 linter and save output
+      - name: Run flake8
+        run: |
+          flake8 . --format=default > flake8-report.txt || true  # Do not fail the job if issues are found
+
+      # Run Reviewdog with flake8 output
       - name: Run Reviewdog
-        uses: reviewdog/action-eslint@v1
+        uses: reviewdog/action-flake8@v1
         with:
           reporter: github-pr-review
-          level: error  # Options: info, warning, error
+          level: warning  # Options: info, warning, error
           filter_mode: file  # Only show issues in files changed in the pull request
