--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -10,28 +10,26 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-      
-      # Set up Python environment
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'  # Replace with your Python version
+          python-version: '3.8.10'  # Replace with your specific version if needed
 
-      # Install Python dependencies
       - name: Install flake8
         run: |
           python -m pip install --upgrade pip
           pip install flake8
 
-      # Run flake8 linter and save output
       - name: Run flake8
         run: |
-          flake8 . --format=default > flake8-report.txt || true  # Do not fail the job if issues are found
+          flake8 . --format=default > flake8-report.txt || true  # Don't fail if issues are found
 
-      # Run Reviewdog with flake8 output
       - name: Run Reviewdog
-        uses: reviewdog/action-flake8@v1
+        uses: reviewdog/action-reviewdog@v0.13.1  # Use the main Reviewdog action
         with:
+          tool_name: flake8
+          input: flake8-report.txt
           reporter: github-pr-review
+          filter_mode: file
           level: warning  # Options: info, warning, error
-          filter_mode: file  # Only show issues in files changed in the pull request
