--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,6 +44,7 @@ jobs:
           scan_name: CGS-Github-codeguru_development
 
       # Step 4: Check for SARIF Results and Prepare Comment
+            # Step 4: Check for SARIF Results and Prepare Comment
       - name: Prepare SARIF Findings and Feedback
         id: prepare_comment
         if: always()
@@ -66,6 +67,7 @@ jobs:
           else
             echo "No SARIF file found; ensure the CodeGuru analysis ran properly."
             echo "comment-prepared=false" >> $GITHUB_ENV
+          fi  # Added this fi to properly close the outermost if block
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
