--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -28,12 +28,16 @@ jobs:
           flake8 . --format=json > flake8-report.json || true
 
       - name: Comment on Pull Request
-        uses: peter-evans/comment-pr@v1
+        uses: actions/github-script@v6
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          pr_number: ${{ github.event.pull_request.number }}
-          body: |
-            ### flake8 Report
-            ```json
-            $(cat flake8-report.json)
-            ```
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require('fs');
+            const report = fs.readFileSync('flake8-report.json', 'utf-8');
+            const commentBody = `### flake8 Report\n\`\`\`json\n${report}\n\`\`\``;
+
+            await github.rest.issues.createComment({
+              ...context.repo,
+              issue_number: context.payload.pull_request.number,
+              body: commentBody,
+            });
