--- a/.github/workflows/post-flake8-report.yml
+++ b/.github/workflows/post-flake8-report.yml
@@ -1,47 +1,20 @@
-name: Post flake8 Report
+name: Test Comment Workflow
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
-    branches:
-      - main
+    types: [opened, synchronize]
 
 jobs:
-  post-flake8-report:
+  test-comment:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: List files
-        run: ls -al
-
-      - name: Install Python and flake8
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.8'
-
-      - name: Install dependencies
-        run: |
-          pip install flake8
-          flake8 . --output-file=flake8-report.json || true
-
-      - name: Debug Event Context
-        run: echo "${{ toJson(github.event) }}"
-
-      - name: Comment on PR with flake8 report
+      - name: Comment on PR
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const fs = require('fs');
-            const report = fs.readFileSync('flake8-report.json', 'utf-8');
-            const commentBody = `### flake8 Report\n\`\`\`json\n${report}\n\`\`\``;
-
             await github.rest.issues.createComment({
               ...context.repo,
               issue_number: context.payload.pull_request.number,
-              body: commentBody,
+              body: 'This is a test comment!',
             });
